--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-share": "^4.1.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
