--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-remark-images": "^3.2.4",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-telemetry": "^2.0.0",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
     "node-sass": "^4.14.1",
