--- a/package.json
+++ b/package.json
@@ -4,35 +4,33 @@
   "description": "Levan K. - Portfolio",
   "version": "0.1.0",
   "author": "Levan Kotolashvili <levani.qotolashvili@gmail.com>",
-  "engines": {
-    "node": "12.14.0",
-    "npm": "6.14.3"
-  },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^4.4.1",
-    "gatsby": "^2.24.47",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-styled-components": "^3.2.1",
-    "gatsby-remark-images": "^3.2.4",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-telemetry": "^2.0.0",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.4.3",
-    "node-sass": "^4.14.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-share": "^4.1.0",
-    "styled-components": "^5.1.0"
+    "gatsby": "^5.12.12",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^5.12.0",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-offline": "^6.12.3",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-sass": "^6.12.3",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-plugin-well-known": "^1.0.0",
+    "gatsby-remark-images": "^7.12.3",
+    "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-telemetry": "^4.12.1",
+    "gatsby-transformer-remark": "^6.12.3",
+    "gatsby-transformer-sharp": "^5.12.3",
+    "node-sass": "^9.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-share": "^5.0.3",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
